aws/backend-lab-app/backend-oc-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-lab-app
  namespace: murillo-labs-openshift
spec:
  selector:
    app: backend-lab-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
