aws/backend-lab-app/backend-oc-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-lab-app
  namespace: murillo-labs-openshift
spec:
  path: /
  to:
    kind: Service
    name: backend-lab-app
  port:
    targetPort: 80
